[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/utility/python/Python.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/utility/python_watcher/python_watcher.gd" type="Script" id=2]

[node name="PythonWatcher" type="Node"]
script = ExtResource( 2 )

[node name="Python" parent="." instance=ExtResource( 1 )]

[node name="KillTimer" type="Timer" parent="."]
one_shot = true

[node name="OutputTimer" type="Timer" parent="."]
wait_time = 0.005

[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
[connection signal="timeout" from="OutputTimer" to="." method="_on_OutputTimer_timeout"]
